--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,6 @@ body {
 
 a {
 	color: inherit;
-	text-decoration: none;
 }
 
 * {
@@ -23,4 +22,24 @@ a {
 		color: white;
 		background: black;
 	}
+}
+
+.root {
+	height: 100vh;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto 1fr auto;
+	grid-template-areas: 'header' 'main' 'footer';
+}
+
+header { grid-area: header; }
+main { grid-area: main; }
+footer { grid-area: footer; }
+
+header h1 {
+	margin: 0;
+}
+
+footer {
+	text-align: right;
 }
